# qdlrs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: build.yml  qcom-preflight-checks.yml
cli/: Cargo.toml
cli/src/: flasher.rs  main.rs  programfile.rs  util.rs
qdl/: Cargo.toml
qdl/src/: lib.rs  parsers.rs  sahara.rs  serial.rs  types.rs  usb.rs  vip.rs
qramdump/: Cargo.toml
qramdump/src/: main.rs
qviptblgen/: Cargo.toml
qviptblgen/src/: main.rs
