[package]
name = "qdl"
version = "0.1.0"
edition = "2024"
authors = ["Konrad Dybcio <konrad.dybcio@oss.qualcomm.com>"]
license = "BSD-3-Clause"
# description = "XXXXX"
readme = "README.md"
repository = "https://github.com/qualcomm/qdlrs"
categories = ["embedded"]
publish = false # TODO

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "qdl"
path = "src/lib.rs"

[dependencies]
anstream = "0.6.15"
anyhow = "1.0"
bincode = "1.3.3"
indexmap = "2.5.0"
owo-colors = "4.1.0"
pbr = "1.1.1"
rusb = { version = "0.9.4", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_repr = "0.1.19"
serial2 = { version = "0.2.28", optional = true }
xmltree = { version = "0.11.0", features = ["attribute-order"] }

[features]
serial = ["dep:serial2"]
usb = ["dep:rusb"]
